php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Doc Bug #37164 SNMP: snmp_set_oid_numeric_print does not behave as expected
Submitted: 2006-04-22 11:11 UTC Modified: 2007-01-07 01:44 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: jorrit at ncode dot nl Assigned:
Status: Closed Package: Documentation problem
PHP Version: 4.4.2 OS: Linux
Private report: No CVE-ID: None
 [2006-04-22 11:11 UTC] jorrit at ncode dot nl
Description:
------------
The (undocumented) function snmp_set_oid_numeric_print doesn't behave like expected. If you supply 1 as argument, the oids get returned numerically, as expected, but there is no way to reverse this action, although the function description suggests so (why would you need an argument anyway?). If you look into the c code, you'll see that only the case argument != 0 is handled.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-07-27 05:21 UTC] sniper@php.net
This has been taken care of in PHP 5.2 (to be released soon):
- Function was renamed to snmp_set_oid_output_format() which describes what it does better (old name is still an alias!)
- Two new constants were added to be used as the parameters: 
SNMP_OID_OUTPUT_FULL and SNMP_OID_OUTPUT_NUMERIC.

Reclassifying as documentation issue, the new function needs docs, and I have no time to do that myself (no checkout of doc stuff either!)

 [2006-07-27 05:22 UTC] sniper@php.net
NOTE: This will NOT be backported to PHP 4.4 as this is not any critical bugfix.
 [2007-01-07 01:44 UTC] didou@php.net
This bug has been fixed in the documentation's XML sources. Since the
online and downloadable versions of the documentation need some time
to get updated, we would like to ask you to be a bit patient.

Thank you for the report, and for helping us make our documentation better.

The documentation for snmp_set_oid_output_format() was added.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Jul 31 13:00:01 2026 UTC