- Fixed bug #37164 (snmp_set_oid_numeric_print() misbehaves)   . Renamed the function to snmp_set_oid_output_format() which describes     it's behaviour better. Old one was left as an alias for it.   . Added 2 new constants: SNMP_OID_OUTPUT_FULL and SNMP_OID_OUTPUT_NUMERIC - Fixed some memleaks # Included some ws fixes to annoy Derick. :)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@217145 c90b9560-bf6c-de11-be94-00142212c4b1